--- a/app/res/layout/fragment_maincategory.xml
+++ b/app/res/layout/fragment_maincategory.xml
@@ -24,8 +24,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
-        android:text="Unable to fetch data."
+        android:text="@string/no_data_label"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true" />
+        android:layout_centerVertical="true"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
 </RelativeLayout>
