--- a/app/res/layout/fragment_settings.xml
+++ b/app/res/layout/fragment_settings.xml
@@ -3,7 +3,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
 
-    <TabHost
+    <android.support.v4.app.FragmentTabHost
         android:id="@+id/settingsTabHost"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -28,6 +28,6 @@
 
             </FrameLayout>
         </LinearLayout>
-    </TabHost>
+    </android.support.v4.app.FragmentTabHost>
 
 </RelativeLayout>
