--- a/app/res/layout/viewpager_generic.xml
+++ b/app/res/layout/viewpager_generic.xml
@@ -4,7 +4,7 @@
     android:layout_height="fill_parent" >
 
     <android.support.v4.app.FragmentTabHost
-        android:id="@+id/settingsTabHost"
+        android:id="@+id/tabHost"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
@@ -16,13 +16,13 @@
             android:orientation="vertical" >
 
             <TabWidget
-                android:id="@+id/settingsTabs"
+                android:id="@+id/tabs"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" >
             </TabWidget>
 
             <FrameLayout
-                android:id="@+id/settingsTabContent"
+                android:id="@+id/tabContent"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" >
 
