--- a/app/res/values/colors.xml
+++ b/app/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="gray">#C0C0C0</color>
+    <color name="dark_blue">#202473</color>
     
 </resources>
