--- a/app/res/layout/activity_tabpager_layout.xml
+++ b/app/res/layout/activity_tabpager_layout.xml
@@ -1,12 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity" >
+    android:layout_height="match_parent" >
 
     <TabHost
         android:id="@+id/tabpager_tabhost"
@@ -35,7 +30,12 @@ xmlns:tools="http://schemas.android.com/tools"
                         android:id="@+id/tabpager_viewpager"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="bottom" />
+                        android:layout_gravity="bottom" 
+                        android:paddingBottom="@dimen/activity_vertical_margin"
+					    android:paddingLeft="@dimen/activity_horizontal_margin"
+					    android:paddingRight="@dimen/activity_horizontal_margin"
+					    android:paddingTop="@dimen/activity_vertical_margin"
+					    />
 
             </LinearLayout>
     </TabHost>
