Added sub categories

--- a/app/res/layout/fragment_maincategory.xml
+++ b/app/res/layout/fragment_maincategory.xml
@@ -11,14 +11,10 @@
         android:background="@color/gray"
         android:orientation="vertical" >
 
-        <TextView
-            android:id="@+id/category_textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="5dp"
-            android:text="Title"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+        <Spinner
+            android:id="@+id/subcategories_spinner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
