--- a/app/res/layout/fragment_register.xml
+++ b/app/res/layout/fragment_register.xml
@@ -1,13 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+<GridLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+
+        android:useDefaultMargins="true"
+        android:alignmentMode="alignBounds"
+        android:columnOrderPreserved="false"
+
+        android:columnCount="4"
+        >
 
     <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Register" />
+            android:text="@string/register_title"
+            android:textSize="32sp"
 
-</LinearLayout>
+            android:layout_columnSpan="4"
+            android:layout_gravity="center_horizontal"
+            />
+
+    <TextView
+            android:text="@string/register_instructions"
+            android:textSize="16sp"
+
+            android:layout_columnSpan="4"
+            android:layout_gravity="left"
+            />
+
+    <TextView
+            android:text="@string/register_username"
+			android:layout_marginLeft="30dp"
+            android:layout_gravity="right"
+            />
+
+    <EditText
+        	android:id="@+id/register_username"
+            android:ems="10"
+             android:inputType="text"
+            />
+	<TextView
+            android:text="@string/register_email"
+            android:layout_gravity="right"
+            android:layout_column="0"
+            />
+
+    <EditText
+        	android:id="@+id/register_email"
+            android:ems="10"
+            android:inputType="textWebEmailAddress"
+            />
+    
+    <TextView
+            android:text="@string/register_password"
+            android:layout_column="0"
+            android:layout_gravity="right"
+            />
+
+    <EditText
+        	android:inputType="textPassword"
+            android:ems="10"
+            android:id="@+id/register_password"
+            />
+	
+	<TextView
+            android:text="@string/register_pw_confirm"
+            android:layout_column="0"
+            android:layout_gravity="right"
+            />
+
+    <EditText
+        	android:inputType="textPassword"
+            android:ems="10"
+            android:id="@+id/register_confirm_pw"
+            />
+    <TextView
+            android:text="@string/register_fn"
+            android:layout_column="0"
+            android:layout_gravity="right"
+            />
+
+    <EditText
+        	android:inputType="text"
+            android:ems="10"
+            android:id="@+id/register_fn"
+            />
+    <TextView
+            android:text="@string/register_ln"
+            android:layout_column="0"
+            android:layout_gravity="right"
+            />
+    <EditText
+        	android:inputType="text"
+            android:ems="10"
+            android:id="@+id/register_lastname"
+            />
+   
+	<Space
+            android:layout_column="0"
+            android:layout_gravity="center_vertical"
+            />
+
+    <Button
+        android:id="@+id/register_btn"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="30dp"
+        android:layout_column="3"
+        android:text="@string/register_str" />
+
+</GridLayout>
