Tabs created on Settings Activity. Added abtraction to List Fragment.

--- a/app/res/layout/activity_tabpager_layout.xml
+++ b/app/res/layout/activity_tabpager_layout.xml
@@ -6,7 +6,8 @@ xmlns:tools="http://schemas.android.com/tools"
     <TabHost
         android:id="@+id/tabpager_tabhost"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:layout_gravity="center" >
 
         <LinearLayout
             android:layout_width="fill_parent"
