Fixes to Add New Credit Card and generalization of classes that can be use in the future for other things in the App.

--- a/app/res/layout/dialog_add_creditcard.xml
+++ b/app/res/layout/dialog_add_creditcard.xml
@@ -70,7 +70,7 @@
         android:layout_toRightOf="@+id/txtCCNumber" />
 
     <Spinner
-        android:id="@+id/cboAddress"
+        android:id="@+id/cboCCAddress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
