--- a/app/res/layout/dialog_creditcard.xml
+++ b/app/res/layout/dialog_creditcard.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin" >
 
     <EditText
         android:id="@+id/txtCCFullName"
@@ -23,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/txtCCFullName"
-        android:ems="12"
+        android:ems="11"
         android:hint="@string/hint_ccnumber"
         android:inputType="number"
         android:maxLength="16" />
@@ -75,5 +79,13 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/txtCCSecurityCode" />
+
+    <CheckBox
+        android:id="@+id/chkCCDefault"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/cboCCAddress"
+        android:text="@string/hint_ccdefault" />
 
 </RelativeLayout>
