Changed Grid Layout to LinearLayout, these scale better

--- a/app/res/layout/fragment_register.xml
+++ b/app/res/layout/fragment_register.xml
@@ -1,114 +1,203 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    >
-<GridLayout
+    android:layout_height="fill_parent" >
+
+    <LinearLayout
+        android:id="@+id/LinearLayout1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:orientation="vertical" >
 
-        android:useDefaultMargins="true"
-        android:alignmentMode="alignBounds"
-        android:columnOrderPreserved="false"
-
-        android:columnCount="4"
-        >
-
-    <TextView
-            android:text="@string/register_title"
-            android:textSize="32sp"
-
-            android:layout_columnSpan="4"
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
             android:layout_gravity="center_horizontal"
-            />
+            android:layout_marginBottom="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_weight="1"
+            android:text="@string/register_title"
+            android:textSize="32sp" />
 
-    <TextView
-            android:text="@string/register_instructions"
-            android:textSize="16sp"
-
-            android:layout_columnSpan="4"
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="left"
-            />
+            android:layout_marginBottom="3dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="3dp"
+            android:text="@string/register_instructions"
+            android:textSize="16sp" />
 
-    <TextView
-            android:text="@string/register_username"
-			android:layout_marginLeft="30dp"
-            android:layout_gravity="right"
-            />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="2dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="2dp" >
 
-    <EditText
-        	android:id="@+id/register_username"
-            android:ems="10"
-             android:inputType="text"
-            />
-	<TextView
-            android:text="@string/register_email"
-            android:layout_gravity="right"
-            android:layout_column="0"
-            />
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="8"
+                android:gravity="right"
+                android:text="@string/register_username" />
 
-    <EditText
-        	android:id="@+id/register_email"
-            android:ems="10"
-            android:inputType="textWebEmailAddress"
-            />
-    
-    <TextView
-            android:text="@string/register_password"
-            android:layout_column="0"
-            android:layout_gravity="right"
-            />
+            <EditText
+                android:id="@+id/register_username"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="text" >
 
-    <EditText
-        	android:inputType="textPassword"
-            android:ems="10"
-            android:id="@+id/register_password"
-            />
-	
-	<TextView
-            android:text="@string/register_pw_confirm"
-            android:layout_column="0"
-            android:layout_gravity="right"
-            />
+                <requestFocus />
+            </EditText>
+        </LinearLayout>
 
-    <EditText
-        	android:inputType="textPassword"
-            android:ems="10"
-            android:id="@+id/register_confirm_pw"
-            />
-    <TextView
-            android:text="@string/register_fn"
-            android:layout_column="0"
-            android:layout_gravity="right"
-            />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="2dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="2dp" >
 
-    <EditText
-        	android:inputType="text"
-            android:ems="10"
-            android:id="@+id/register_fn"
-            />
-    <TextView
-            android:text="@string/register_ln"
-            android:layout_column="0"
-            android:layout_gravity="right"
-            />
-    <EditText
-        	android:inputType="text"
-            android:ems="10"
-            android:id="@+id/register_lastname"
-            />
-   
-	<Space
-            android:layout_column="0"
-            android:layout_gravity="center_vertical"
-            />
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="8"
+                android:gravity="right"
+                android:text="@string/register_email" />
 
-    <Button
-        android:id="@+id/register_btn"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="30dp"
-        android:layout_column="3"
-        android:text="@string/register_str" />
+            <EditText
+                android:id="@+id/register_email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="textWebEmailAddress" />
+        </LinearLayout>
 
-</GridLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="2dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="2dp" >
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="8"
+                android:gravity="right"
+                android:text="@string/register_password" />
+
+            <EditText
+                android:id="@+id/register_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="textPassword" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="2dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="2dp" >
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="8"
+                android:gravity="right"
+                android:text="@string/register_pw_confirm" />
+
+            <EditText
+                android:id="@+id/register_confirm_pw"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="textPassword" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="2dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="2dp" >
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="8"
+                android:gravity="right"
+                android:text="@string/register_fn" />
+
+            <EditText
+                android:id="@+id/register_fn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="text" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="2dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="2dp" >
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="8"
+                android:gravity="right"
+                android:text="@string/register_ln" />
+
+            <EditText
+                android:id="@+id/register_lastname"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="text" />
+        </LinearLayout>
+
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical" />
+
+        <Button
+            android:id="@+id/register_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="20dp"
+            android:text="@string/register_str" />
+
+    </LinearLayout>
+
 </ScrollView>
