--- a/app/res/layout/dialog_filter.xml
+++ b/app/res/layout/dialog_filter.xml
@@ -1,146 +1,163 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/LinearLayout1"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:layout_gravity="center"
-    android:columnCount="4" 
     android:focusable="true"
-	android:focusableInTouchMode="true">
+    android:focusableInTouchMode="true"
+    android:orientation="vertical" >
 
     <!-- Sort -->
 
     <TextView
-        android:textStyle="bold"
-        android:layout_column="0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="left|top"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="5dp"
         android:layout_marginTop="5dp"
         android:text="@string/search_filter_sort"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <Space
-        android:layout_columnSpan="3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="fill" />
 
     <Spinner
         android:id="@+id/filterSortSpinner"
-        android:layout_column="0"
-        android:layout_columnSpan="4"
         android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="left|top"
-        android:layout_row="1" />
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp" />
 
     <!-- Category -->
 
     <TextView
-        android:layout_column="0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="left|top"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="5dp"
         android:layout_marginTop="5dp"
-        android:layout_row="2"
-    	android:textStyle="bold"
         android:text="@string/search_filter_categories"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <Space
-        android:layout_columnSpan="3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="fill" />
 
     <Spinner
         android:id="@+id/filterCategorySpinner"
-        android:layout_column="0"
-		android:layout_width="fill_parent"
-        android:layout_columnSpan="4"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="left|top"
-        android:layout_row="3" />
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp" />
 
     <!-- Rating -->
 
     <TextView
-        android:layout_column="0"
-        android:textStyle="bold"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="left|top"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="5dp"
         android:layout_marginTop="5dp"
-        android:layout_row="4"
         android:text="@string/search_filter_rating"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <Space
-        android:layout_columnSpan="3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="fill" />
 
     <Spinner
         android:id="@+id/filterRatingSpinner"
-        android:layout_column="0"
         android:layout_width="fill_parent"
-        android:layout_columnSpan="4"
+        android:layout_height="wrap_content"
         android:layout_gravity="left|top"
-        android:layout_row="5" />
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp" />
 
     <!-- Condition -->
 
     <TextView
-        android:layout_column="0"
-        android:textStyle="bold"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="left|top"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="5dp"
         android:layout_marginTop="5dp"
-        android:layout_row="6"
         android:text="@string/search_filter_condition"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <Space
-        android:layout_columnSpan="3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="fill" />
 
     <Spinner
         android:id="@+id/filterConditionSpinner"
-        android:layout_column="0"
         android:layout_width="fill_parent"
-        android:layout_columnSpan="4"
+        android:layout_height="wrap_content"
         android:layout_gravity="left|top"
-        android:layout_row="7" />
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp" />
 
     <!-- Price -->
 
     <TextView
-        android:textStyle="bold"
-        android:layout_column="0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="left|top"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="5dp"
         android:layout_marginTop="5dp"
-        android:layout_row="8"
         android:text="@string/search_filter_price"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <Space
-        android:layout_columnSpan="3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="fill" />
 
-    <EditText
-        android:id="@+id/filterStartText"
-        android:layout_marginBottom="10dp"
-        android:layout_column="0"
-        android:layout_gravity="left|center_vertical"
-        android:ems="6"
-        android:inputType="numberDecimal"
-        android:hint="@string/search_filter_start_hint" >
-    </EditText>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
 
-    <TextView
-        android:layout_column="1"
-        android:layout_gravity="left|center_vertical"
-        android:text="@string/search_filter_to" />
-   
-	 <EditText
-        android:id="@+id/filterEndText"
-        android:hint="@string/search_filter_end_hint"
-        android:layout_column="2"
-        android:layout_gravity="left|center_vertical"
-        android:ems="6"
-        android:inputType="numberDecimal" >
-    </EditText>
-    
+        <EditText
+            android:id="@+id/filterStartText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="2dp"
+            android:layout_weight="1"
+            android:ems="6"
+            android:hint="@string/search_filter_start_hint"
+            android:inputType="numberDecimal" >
 
-</GridLayout>
+            <requestFocus />
+        </EditText>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/search_filter_to" />
+
+        <EditText
+            android:id="@+id/filterEndText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="2dp"
+            android:layout_weight="1"
+            android:ems="6"
+            android:hint="@string/search_filter_end_hint"
+            android:inputType="numberDecimal" />
+
+    </LinearLayout>
+
+</LinearLayout>
