--- a/app/res/layout/fragment_settinglist.xml
+++ b/app/res/layout/fragment_settinglist.xml
@@ -47,6 +47,9 @@
          style="?android:attr/progressBarStyleLarge"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
-         android:layout_centerInParent="true" />
+         android:layout_centerHorizontal="true"
+         android:layout_centerVertical="true"
+
+         android:indeterminate="true" />
 
 </RelativeLayout>
