--- a/app/res/layout/listview_creditcard_row.xml
+++ b/app/res/layout/listview_creditcard_row.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent" >
 
     <ImageView
+        android:contentDescription="@string/cc_image_desc"
         android:id="@+id/imgCreditCard"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
