--- a/app/res/menu/actionbar_main_menu.xml
+++ b/app/res/menu/actionbar_main_menu.xml
@@ -40,7 +40,7 @@
 	        android:id="@+id/btn_search_filter" 
 	        android:visible="false"
 	        android:orderInCategory="1000"
-	        android:showAsAction="ifRoom" 
+	        android:showAsAction="always" 
 	        android:icon="@drawable/btn_filter" android:title="@string/btn_filters">
 	    </item>
 </menu>
