--- a/app/res/layout/popup_cart.xml
+++ b/app/res/layout/popup_cart.xml
@@ -6,7 +6,7 @@
     android:layout_gravity="center" >
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/btnProductAdd"
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
