--- a/app/res/layout/fragment_product_list.xml
+++ b/app/res/layout/fragment_product_list.xml
@@ -4,19 +4,58 @@
     android:layout_height="fill_parent" >
 
     <ImageView
-        android:id="@+id/imageView1"
+        android:id="@+id/plPlaceHolder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:src="@drawable/placeholder_product_list" />
+        android:src="@drawable/placeholder_product_list"
+        android:contentDescription="@string/product_list_placeholder_desc" />
     <ProgressBar
-            android:id="@+id/product"
+            android:id="@+id/plProgressBar"
             style="?android:attr/progressBarStyleLarge"
+            android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
        		android:layout_centerVertical="true"
             android:layout_centerInParent="true" />
+
+    <LinearLayout
+        android:visibility="gone"
+        android:id="@+id/plLinearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical" >
+
+        <LinearLayout
+            android:background="@color/gray"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/plTextView"
+                android:textStyle="bold"
+                android:textSize="16sp"
+                android:padding="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/product_list_best_match" />
+
+            <Spinner
+                android:id="@+id/plSpinner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
+        <ListView
+            android:id="@+id/plListView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+        </ListView>
+        
+    </LinearLayout>
 
 </RelativeLayout>
