--- a/app/res/layout/fragment_product_list.xml
+++ b/app/res/layout/fragment_product_list.xml
@@ -45,13 +45,16 @@
 
             <Spinner
                 android:id="@+id/plSpinner"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
         </LinearLayout>
 
         <ListView
             android:id="@+id/plListView"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
         </ListView>
