--- a/app/res/layout/fragment_product.xml
+++ b/app/res/layout/fragment_product.xml
@@ -9,35 +9,43 @@
         android:layout_height="wrap_content"
         android:orientation="vertical" >
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/productNameTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="2dp"
-            android:layout_marginRight="2dp" >
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:singleLine="true"
+            android:text="Product Name"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
 
-            <TextView
-                android:id="@+id/textView1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Product Name"
-                android:textAppearance="?android:attr/textAppearanceLarge" />
-
-            <Button
-                android:id="@+id/btnProductAdd"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Add to Cart" />
-        </LinearLayout>
+        <Button
+            android:id="@+id/btnProductAdd"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:text="Add to Cart" />
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/priceTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="$4.99"
+            android:text="Price: "
             android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="5dp"
+            android:background="@color/light_gray"
+            android:orientation="vertical" >
+        </LinearLayout>
 
         <HorizontalScrollView
             android:id="@+id/horizontalScrollView1"
@@ -57,78 +65,117 @@
                     android:id="@+id/imageView1"
                     android:layout_width="150dp"
                     android:layout_height="150dp"
+                    android:layout_margin="5dp"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/about_logo" />
+                    android:src="@drawable/cat1" />
 
                 <ImageView
                     android:id="@+id/imageView2"
                     android:layout_width="150dp"
                     android:layout_height="150dp"
+                    android:layout_margin="5dp"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/about_logo" />
+                    android:src="@drawable/cat2" />
 
                 <ImageView
                     android:id="@+id/imageView3"
                     android:layout_width="150dp"
                     android:layout_height="150dp"
+                    android:layout_margin="5dp"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/about_logo" />
+                    android:src="@drawable/cat3" />
 
                 <ImageView
                     android:id="@+id/imageView4"
                     android:layout_width="150dp"
                     android:layout_height="150dp"
+                    android:layout_margin="5dp"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/about_logo" />
+                    android:src="@drawable/cat4" />
             </LinearLayout>
         </HorizontalScrollView>
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="5dp"
+            android:background="@color/light_gray"
+            android:orientation="vertical" >
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="2dp"
-            android:layout_marginRight="2dp" >
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp" >
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/brandTextView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Brand: Pier"
+                android:text="Brand: "
                 android:textAppearance="?android:attr/textAppearanceMedium" />
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/modelTextView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Model: ES-123"
+                android:text="Model: "
                 android:textAppearance="?android:attr/textAppearanceMedium" />
         </LinearLayout>
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/descriptionTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="2dp"
-            android:layout_marginRight="2dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             android:inputType="textMultiLine"
             android:text="This is a very long description that makes no sense and that no one shoulld read because it is really fake and its only purpose is to fill this space."
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="5dp"
+            android:background="@color/light_gray"
+            android:orientation="vertical" >
+        </LinearLayout>
+
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/sellerTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="Reviews:"
+            android:layout_marginLeft="5dp"
+            android:text="Seller:"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
-        <ListView
-            android:id="@+id/listView1"
+        <LinearLayout
+            android:id="@+id/ratingLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-        </ListView>
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:clickable="true" >
+
+            <RatingBar
+                android:layout_gravity="center"
+                android:id="@+id/ratingBar"
+                android:isIndicator="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:numStars="5"
+                android:rating="4.5" />
+
+        </LinearLayout>
+
     </LinearLayout>
 
 </ScrollView>
