--- a/app/res/values/colors.xml
+++ b/app/res/values/colors.xml
@@ -2,5 +2,6 @@
 <resources>
     <color name="gray">#C0C0C0</color>
     <color name="dark_blue">#202473</color>
+    <color name="light_gray">#D3D3D3</color>
     
 </resources>
