Changes partial implementation of My Orders, change of typing to MainInterfaceActivity.

--- a/app/res/values/colors.xml
+++ b/app/res/values/colors.xml
@@ -6,5 +6,7 @@
     <color name="white">#FFFFFF</color>
     <color name="darker_white">#F6F6F6</color>
     <color name="black">#000000</color>
+    <color name="dark_brown">#734A29</color>
+    <color name="light_brown">#DE9D62</color>
     
 </resources>
