--- a/app/res/layout/fragment_about.xml
+++ b/app/res/layout/fragment_about.xml
@@ -5,21 +5,23 @@
     android:orientation="vertical" >
 
     <ImageView
-        android:id="@+id/aboutImageView"
-        android:contentDescription="@string/about_logo_description"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:paddingTop="25dp"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/about_logo" />
-
-    <TextView
-        android:id="@+id/aboutTextDescription"
+        android:contentDescription="@string/about_description"
+        android:id="@+id/imageView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/aboutImageView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:src="@drawable/logo_about" />
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/imageView1"
         android:layout_centerHorizontal="true"
-        android:layout_margin="60dp"
-        android:textSize="50sp"
-        android:text="@string/about_description" />    
+        android:layout_marginBottom="67dp"
+        android:textSize="45sp"
+        android:text="@string/mod_names"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+    
 </RelativeLayout>
