Change ListViews to Android Card UI

--- a/app/res/layout/listview_orders_row.xml
+++ b/app/res/layout/listview_orders_row.xml
@@ -1,44 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:columnCount="2" >
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent">
+<!--  AUNQUE DIGA QUE NO EL EFECTO DE CARD SE LOGRA ASI -->
+	<LinearLayout
+		android:layout_width="match_parent"
+		android:layout_height="match_parent" 
+		android:layout_marginLeft="6dp"
+		android:layout_marginRight="6dp"
+		android:layout_marginTop="4dp"
+		android:layout_marginBottom="4dp"
+		android:background="@drawable/bg_card">
+		<!-- Card Contents go here -->
+		<GridLayout
+		    android:layout_width="fill_parent"
+		    android:layout_height="fill_parent"
+		    android:columnCount="2" >
+		
+		    <TextView
+		        android:id="@+id/ordersrow_num"
+		        android:textStyle="bold"
+		        android:textSize="25sp"
+		        android:layout_margin="10dp"
+		        android:layout_column="0"
+		        android:layout_gravity="left|top"
+		        android:layout_row="0"
+		        android:text="@string/orders_number" />
+		
+		
+		    <TextView
+		        android:id="@+id/ordersrow_total"
+		        android:layout_margin="10dp"
+		        android:textSize="20sp"
+		        android:layout_column="1"
+		        android:layout_gravity="right|top"
+		        android:text="@string/orders_total" />
+		
+		    <TextView
+		        android:id="@+id/ordersrow_date"
+		        android:layout_column="0"
+		        android:layout_gravity="left|top"
+		        android:layout_row="1"
+		        android:textSize="15sp"
+		        android:layout_margin="10dp"
+		        android:text="@string/orders_date" />
+		
+		
+		    <TextView
+		        android:id="@+id/ordersrow_quantity"
+		        android:layout_column="1"
+		        android:textSize="15sp"
+		        android:layout_gravity="right|top"
+		        android:layout_margin="10dp"
+		        android:text="@string/orders_quantity" />
+		
+		</GridLayout>
 
-    <TextView
-        android:id="@+id/ordersrow_num"
-        android:textStyle="bold"
-        android:textSize="25sp"
-        android:layout_margin="10dp"
-        android:layout_column="0"
-        android:layout_gravity="left|top"
-        android:layout_row="0"
-        android:text="@string/orders_number" />
+	</LinearLayout>
 
-
-    <TextView
-        android:id="@+id/ordersrow_total"
-        android:layout_margin="10dp"
-        android:textSize="20sp"
-        android:layout_column="1"
-        android:layout_gravity="right|top"
-        android:text="@string/orders_total" />
-
-    <TextView
-        android:id="@+id/ordersrow_date"
-        android:layout_column="0"
-        android:layout_gravity="left|top"
-        android:layout_row="1"
-        android:textSize="15sp"
-        android:layout_margin="10dp"
-        android:text="@string/orders_date" />
-
-
-    <TextView
-        android:id="@+id/ordersrow_quantity"
-        android:layout_column="1"
-        android:textSize="15sp"
-        android:layout_gravity="right|top"
-        android:layout_margin="10dp"
-        android:text="@string/orders_quantity" />
-
-</GridLayout>
+</FrameLayout>
