--- a/app/res/layout/fragment_myorders_list.xml
+++ b/app/res/layout/fragment_myorders_list.xml
@@ -7,10 +7,9 @@
         android:id="@+id/orders"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/light_gray"
         android:text="@string/orders_title" 
-        android:textSize="15sp"
-        android:textStyle="bold"
+        android:textSize="25sp"
+        android:textStyle="bold|italic"
         android:padding="10dp"/>
 
     <ListView
@@ -24,6 +23,11 @@
         android:id="@+id/orders_loader"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="6dp"
+		android:layout_marginRight="6dp"
+		android:layout_marginTop="4dp"
+		android:layout_marginBottom="4dp"
+		android:background="@drawable/bg_card"
         android:columnCount="2" >
 
         <TextView
